fix: added ellipsis to truncated links

--- a/theme.css
+++ b/theme.css
@@ -5,7 +5,7 @@ Created by Daniel (@danielkhmara) | https://github.com/danielkhmara/obsidian-lum
 
 ---------------------------------------------------------------------------------------
 
-Lumines Obsidian Version: 1.1.0
+Lumines Obsidian Version: 1.1.1-alpha.1
 Support Obsidian Version: 1.0.0+
 
 ---------------------------------------------------------------------------------------
@@ -562,6 +562,17 @@ ul.dataview-ul {
 
 .dataview.list-view-ul {
    margin-bottom: revert;
+}
+
+.dataview-result-list-li {
+   margin-left: 0 !important;
+}
+
+.dataview .external-link {
+   display: block;
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
 }
 
 .block-language-dataview.node-insert-event > table > tbody > tr > td > ul > li {
